samples/_failures_safe/1761560962_8504b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f535d50a.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_f535d50a.c:141:5: error: expected declaration or statement at end of input
  141 |     for (int i = 0; i < analyzer->word_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_f535d50a.c:141:5: error: expected declaration or statement at end of input
